# debug-server

./: README.md  app.py  client.py  hello.py  pyproject.toml
lib/: fancy_panel.py  fancy_panel_tree.py
templates/: view_files.html
